--- a/Pigeon/Pigeon.Demo/src/Producer.API/Producer.API.csproj
+++ b/Pigeon/Pigeon.Demo/src/Producer.API/Producer.API.csproj
@@ -1,17 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>4f6142a4-fbf0-4b65-a199-95e27b5f347e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Pigeon.Messaging" Version="1.0.6" />
-    <PackageReference Include="Pigeon.Messaging.Kafka" Version="1.0.6" />
-    <PackageReference Include="Pigeon.Messaging.Rabbit" Version="1.0.6" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Pigeon.Messaging" />
+    <PackageReference Include="Pigeon.Messaging.Azure.ServiceBus"/>
+    <PackageReference Include="Pigeon.Messaging.Kafka" />
+    <PackageReference Include="Pigeon.Messaging.Rabbit" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
   </ItemGroup>
 
   <ItemGroup>
