--- a/Pigeon/Pigeon.Demo/src/Producer.API/appsettings.json
+++ b/Pigeon/Pigeon.Demo/src/Producer.API/appsettings.json
@@ -19,6 +19,9 @@
         "SecurityProtocol": "PlainText",
         "SaslMechanism": "Plain",
         "Acks": "All"
+      },
+      "AzureServiceBus": {
+        "ConnectionString": ""
       }
     }
   }
