--- a/Pigeon/Pigeon.Demo/Directory.Build.targets
+++ b/Pigeon/Pigeon.Demo/Directory.Build.targets
@@ -4,10 +4,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-    <PackageReference Update="Pigeon.Messaging" Version="1.0.10" />
-    <PackageReference Update="Pigeon.Messaging.Azure.ServiceBus" Version="1.0.10" />
-    <PackageReference Update="Pigeon.Messaging.Kafka" Version="1.0.10" />
-    <PackageReference Update="Pigeon.Messaging.Rabbit" Version="1.0.10" />
+    <PackageReference Update="Pigeon.Messaging" Version="1.1.3" />
+    <PackageReference Update="Pigeon.Messaging.Azure.ServiceBus" Version="1.1.3" />
+    <PackageReference Update="Pigeon.Messaging.Azure.EventGrid" Version="1.1.3" />
+    <PackageReference Update="Pigeon.Messaging.Azure.EventHub" Version="1.1.3" />
+    <PackageReference Update="Pigeon.Messaging.Kafka" Version="1.1.3" />
+    <PackageReference Update="Pigeon.Messaging.Rabbit" Version="1.1.3" />
     <PackageReference Update="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
