--- a/Pigeon/Pigeon.Demo/src/Consumer.API/appsettings.json
+++ b/Pigeon/Pigeon.Demo/src/Consumer.API/appsettings.json
@@ -22,6 +22,23 @@
       },
       "AzureServiceBus": {
         "ConnectionString": ""
+      },
+      "AzureEventGrid": {
+        "ServiceBusEndpoint": "",
+        "Endpoints": {
+          "Greeting": {
+            "Url": "",
+            "AccessKey": ""
+          },
+          "Users": {
+            "Url": "",
+            "AccessKey": ""
+          }
+        },
+        "TopicRouting": {
+          "commands.demo.hello-world": "Greeting",
+          "events.demo.user-created": "Users"
+        }
       }
     }
   }
