--- a/Pigeon/Pigeon.Demo/src/Producer.API/Producer.API.csproj
+++ b/Pigeon/Pigeon.Demo/src/Producer.API/Producer.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <UserSecretsId>4f6142a4-fbf0-4b65-a199-95e27b5f347e</UserSecretsId>
@@ -6,7 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Pigeon.Messaging" />
-    <PackageReference Include="Pigeon.Messaging.Azure.ServiceBus"/>
+    <PackageReference Include="Pigeon.Messaging.Azure.ServiceBus" />
+    <PackageReference Include="Pigeon.Messaging.Azure.EventGrid" />
+    <PackageReference Include="Pigeon.Messaging.Azure.EventHub" />
     <PackageReference Include="Pigeon.Messaging.Kafka" />
     <PackageReference Include="Pigeon.Messaging.Rabbit" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
